# fedora_openqa-ai-test

./: .arcconfig  .gitignore  .zuul.yaml  MANIFEST.in  README.md  checkwiki  fedora-openqa-consumer.py  fedora-openqa-fedmsg.py  fedora-openqa-schedule.py  fedora-openqa.py  fedora_openqa_resultsdb_reporter.stg.toml  fedora_openqa_resultsdb_reporter.toml  fedora_openqa_scheduler.stg.toml  fedora_openqa_scheduler.toml  fedora_openqa_wiki_reporter.stg.toml  fedora_openqa_wiki_reporter.toml  images.json.sample  install.requires  pyproject.toml  schedule.conf.sample  setup.py  tests.requires  tox.ini  tox.requires
ci/: tox.yaml
fedora_openqa/: cli.py  conf_test_suites.py  config.py  consumer.py  report.py  schedule.py
fedora_openqa_schedule/: cli.py  conf_test_suites.py  config.py  consumer.py  report.py  schedule.py
sample-configs/: fedora_openqa_resultsdb_reporter.stg.toml  fedora_openqa_resultsdb_reporter.toml  fedora_openqa_scheduler.stg.toml  fedora_openqa_scheduler.toml  fedora_openqa_wiki_reporter.stg.toml  images.json.sample  schedule.conf.sample
src/fedora_openqa/: __init__.py  cli.py  conf_test_suites.py  config.py  consumer.py  report.py  schedule.py
systemd/: openqa-consumer.service
tests/: conftest.py  test_cli.py  test_consumers.py  test_report.py  test_schedule.py
tests/data/: composeinfo.json  images.json
