[build-system]
requires = ["setuptools>=40.6.0", "setuptools-git", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
source = ["fedora_openqa"]

[tool.coverage.paths]
source = ["src", ".tox/**/site-packages"]

[tool.coverage.report]
show_missing = true
